# AeroSavor

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  prometheus.yml  pyproject.toml  test_systematic.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/assets/: Logo.tsx
frontend/src/constants/: agents.ts
migrations/: env.py
migrations/versions/: 0001_init.py  0002_embedding_1024.py  0003_session_search_context.py  0004_interaction_score.py  0005_session_title.py
scripts/: demo_cli.py  eval_recommendations.py  full_test.py  seed_test_data.py  smoke_test.py  test_amap_api.py
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  chat.py  feedback.py  history.py
src/core/: __init__.py  config.py  database.py  event_bus.py  llm.py  logging.py  product_identity.py  rate_limit.py  redis_client.py
src/graph/: __init__.py  builder.py  messages.py  prompts.py  state.py  supervisor.py
src/models/: __init__.py
src/monitoring/: __init__.py  metrics.py
src/services/: __init__.py  memory_service.py  personalization.py  preference_service.py  session_service.py
src/tools/: __init__.py  amap_client.py  coords.py  route_tools.py  search_tools.py
tests/: __init__.py  test_amap_tools.py  test_api.py  test_graph_flow.py  test_graph_nodes.py  test_multiagent.py  test_personalization.py
ucos2_edf/: app_cfg.h  edf_demo.c  main.c
(+41 files in other folders)
