[tool.poetry]
name = "restaurant-agent"
version = "0.1.0"
description = "餐厅推荐智能体 - LangGraph Multi-Agent + 高德地图 + pgvector 个性化推荐"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# AI 框架
langgraph = "^0.2.40"
langchain-core = "^0.3.0"
langsmith = "^0.1.0"

# 向量化（仅 embedding）
openai = "^1.40.0"

# Web 框架
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"

# 数据库
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"

# 缓存
redis = {extras = ["asyncio"], version = "^5.0.0"}

# 监控
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
prometheus-client = "^0.21.0"

# HTTP 客户端
httpx = "^0.27.0"

# 配置与工具
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
